infra/kubernetes/base/welcome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gramly-welcome
  labels:
    app.kubernetes.io/part-of: gramly
    gramly.tech/contour: public
    gramly.tech/admin-plane: owner
    gramly.tech/environment: production
